--- a/example/app/app.component.html
+++ b/example/app/app.component.html
@@ -1,25 +1,35 @@
 <div id="example">
-    <div style="margin:0.5rem 0rem" class="form-control col-3" (click)="toggleMultiple()">  
-        <input id="multipleCheckbox" type="checkbox" [checked]="multiple"  style="margin-right:0.3rem"/>Multiple
+    <div style="margin:0.5rem 0rem" class="form-control col-3" (click)="toggleMultiple()">
+        <input id="multipleCheckbox" type="checkbox" [checked]="multiple" style="margin-right:0.3rem" />Multiple
     </div>
-    <div style="margin:0.5rem 0rem" class="form-control col-3" (click)="toggleTemplate()">  
-        <input id="templateCheckbox" type="checkbox" [checked]="customTemplate"  style="margin-right:0.3rem"/>Custom Template
+    <div style="margin:0.5rem 0rem" class="form-control col-3" (click)="toggleTemplate()">
+        <input id="templateCheckbox" type="checkbox" [checked]="customTemplate" style="margin-right:0.3rem" />Custom Template
     </div>
     <div *ngIf="!multiple">
         <div class="form-group row" id="cityGroup">
-            <label for="city" class="col-form-label col-sm-2 result-label" ><strong>City: </strong></label>
+            <label for="city" class="col-form-label col-sm-2 result-label">
+                <strong>City: </strong>
+            </label>
             <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="city">{{selectedOptions.name}}</label>
         </div>
         <div class="form-group row" id="countryGroup">
-            <label for="country" class="col-form-label col-sm-2 result-label"><strong>Country: </strong></label>
+            <label for="country" class="col-form-label col-sm-2 result-label">
+                <strong>Country: </strong>
+            </label>
             <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="country">{{selectedOptions.country}}</label>
         </div>
         <div class="form-group row" id="flagGroup">
-            <label for="flag" class="col-form-label col-sm-2 result-label"><strong>Flag: </strong></label>
-            <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="country"><img src={{selectedOptions.flag}}/></label>
+            <label for="flag" class="col-form-label col-sm-2 result-label">
+                <strong>Flag: </strong>
+            </label>
+            <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="country">
+                <img src={{selectedOptions.flag}}/>
+            </label>
         </div>
         <div class="form-group row" id="populationGroup">
-            <label for="population" class="col-form-label col-sm-2 result-label"><strong>Population: </strong></label>
+            <label for="population" class="col-form-label col-sm-2 result-label">
+                <strong>Population: </strong>
+            </label>
             <label *ngIf="selectedOptions" class="col-sm-10 result-label" id="population">{{selectedOptions.population.toLocaleString("en")}}</label>
         </div>
     </div>
@@ -28,7 +38,7 @@
             <thead>
                 <th>City</th>
                 <th>Country</th>
-                <th>Population</th>    
+                <th>Population</th>
                 <th>Flag</th>
             </thead>
             <tbody>
@@ -36,40 +46,31 @@
                     <td>{{option.name}}</td>
                     <td>{{option.country}}</td>
                     <td>{{option.population}}</td>
-                    <td><img src={{option.flag}}/></td>
+                    <td>
+                        <img src={{option.flag}}/>
+                    </td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div *ngIf="!customTemplate">
-        <ngx-paged-select [options]="allCities"
-                      [hasMoreOptions]="hasMoreOptions"
-                      [key]="'name'"
-                      [showNum]="5"
-                      [multiple]="multiple"
-                      [placeholder]="'Choose City'"
-                      (loadData)="loadData($event)"
-                      (optionSelected)="showCity($event)">
+        <ngx-paged-select [options]="allCities" [hasMoreOptions]="hasMoreOptions" [key]="'name'" [showNum]="5" [multiple]="multiple"
+            [placeholder]="'Choose City'" (loadData)="loadData($event)" (optionSelected)="showCity($event)">
         </ngx-paged-select>
     </div>
-    
+
     <div *ngIf="customTemplate">
-        <ngx-paged-select [options]="allCities"
-                      [hasMoreOptions]="hasMoreOptions"
-                      [key]="'name'"
-                      [showNum]="5"
-                      [multiple]="multiple"
-                      [placeholder]="'Choose City'"
-                      (loadData)="loadData($event)"
-                      (optionSelected)="showCity($event)">
-                  
-            <ng-template let-option option >
-              <span><img src={{option.flag}}/>  {{option.name}}</span>
+        <ngx-paged-select [options]="allCities" [hasMoreOptions]="hasMoreOptions" [key]="'name'" [showNum]="5" [multiple]="multiple"
+            [placeholder]="'Choose City'" (loadData)="loadData($event)" (optionSelected)="showCity($event)">
+
+            <ng-template let-option option>
+                <span>
+                    <img src={{option.flag}}/> {{option.name}}</span>
             </ng-template>
             <ng-template let-result result>
-              <div><img src={{result.flag}}/> {{result.name}}</div>
+                <div>
+                    <img src={{result.flag}}/> {{result.name}}</div>
             </ng-template>
         </ngx-paged-select>
     </div>
 </div>
-            
