--- a/select/src/select.component.html
+++ b/select/src/select.component.html
@@ -15,7 +15,9 @@
                 </span>
             </div>
         </span>
-        <span class="dropdown-toggle input-group-addon"></span>
+        <div class="input-group-append">
+            <span class="dropdown-toggle input-group-text"></span>
+        </div>
     </div>
 
     <div [ngClass]="{'show': selectOpened}" class="dropdown-menu paged-select-dropdown-menu">
